--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "Synex",
   "version": "1.0.0",
-  "description": "An Discord Bot Made Using Discord.js v14",
-  "main": "index.js",
+  "description": "A Discord Bot Made Using Discord.js v14",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\"",
-    "start": "clear && node src/index.js",
-    "dev": "clear && nodemon src/index.js",
+    "start": "tsc && node dist/index.js",
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "build": "tsc",
     "format": "prettier -w .",
     "lint": "eslint ."
   },
@@ -19,6 +20,7 @@
   "dependencies": {
     "colors": "^1.4.0",
     "discord.js": "^14.15.3",
+    "dotenv": "^16.4.5",
     "fs": "0.0.1-security",
     "path": "^0.12.7"
   },
@@ -28,6 +30,8 @@
     "eslint": "^9.8.0",
     "globals": "^15.9.0",
     "nodemon": "^3.1.4",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   }
 }
