--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "A Discord Bot Made Using Discord.js v14",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\"",
-    "start": "tsc && node dist/index.js",
+    "start": "node dist/index.js",
     "dev": "nodemon --exec ts-node src/index.ts",
     "build": "tsc",
     "format": "prettier -w .",
@@ -27,11 +26,12 @@
   "devDependencies": {
     "@eslint/js": "^9.8.0",
     "@stylistic/eslint-plugin-js": "^2.6.1",
+    "@types/node": "^22.1.0",
     "eslint": "^9.8.0",
     "globals": "^15.9.0",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   }
 }
