--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,20 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "CommonJS",
-    "strict": true,
+    "lib": ["ES2022"],
+    "target": "ES2022",
+    "moduleResolution": "Bundler",
+    "module": "ES2022",
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "outDir": "./dist",
-    "rootDir": "./src"
+    "noUncheckedIndexedAccess": true,
+    "removeComments": true,
+    "allowJs": true,
+    "strict": true,
+    "noEmit": true,
+    "declaration": false
   },
-  "include": ["src/**/*"]
+  "include": ["src"],
+  "exclude": ["dist", "node_modules", ".commandkit"]
 }
