--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "commandkit dev",
     "build": "commandkit build",
-    "start": "commandkit start"
+    "start": "commandkit start",
+    "prettier": "prettier -w ."
   },
   "keywords": [],
   "author": "",
@@ -15,5 +16,8 @@
     "commandkit": "^0.1.10",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.3"
   }
 }
