--- a/package.json
+++ b/package.json
@@ -3,25 +3,24 @@
   "version": "0.0.0",
   "description": "",
   "scripts": {
-    "dev": "commandkit dev",
-    "build": "commandkit build",
-    "start": "commandkit start",
-    "prettier": "prettier -w .",
-    "nodemon": "nodemon"
+    "dev": "nodemon",
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "prettier": "prettier -w ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "commandkit": "^0.1.10",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5"
   },
   "devDependencies": {
+    "@types/node": "^22.2.0",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.17.0",
     "typescript": "^5.5.4"
   }
 }
