--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "chalk": "^5.3.0",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5"
   },
