--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "nodemon",
     "build": "tsc",
+    "esbuild": "node esbuild.build.cjs",
     "start": "node dist/index.js",
     "prettier": "prettier -w ."
   },
@@ -15,10 +16,12 @@
   "dependencies": {
     "chalk": "^5.3.0",
     "discord.js": "^14.15.3",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "fs": "0.0.1-security"
   },
   "devDependencies": {
     "@types/node": "^22.2.0",
+    "esbuild": "^0.23.0",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
     "tsx": "^4.17.0",
