--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "synex",
   "version": "0.0.0",
-  "description": "",
+  "description": "A Discord Bot Made Using Typescript",
   "scripts": {
     "dev": "nodemon",
     "build": "tsc",
     "esbuild": "node esbuild.build.cjs",
-    "start": "node dist/index.js",
+    "start": "bun run src/index.ts",
     "prettier": "prettier -w ."
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "RohanDaCoder",
+  "license": "MIT",
   "type": "module",
   "dependencies": {
     "chalk": "^5.3.0",
