--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "A Discord Bot Made Using Typescript",
   "scripts": {
-    "dev": "nodemon",
+    "dev": "bun --watch run src/index.ts",
     "build": "tsc",
     "esbuild": "node esbuild.build.cjs",
     "start": "bun run src/index.ts",
@@ -22,9 +22,7 @@
   "devDependencies": {
     "@types/node": "^22.2.0",
     "esbuild": "^0.23.0",
-    "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
-    "tsx": "^4.17.0",
     "typescript": "^5.5.4"
   }
 }
