--- a/package.json
+++ b/package.json
@@ -1,30 +1,27 @@
 {
-  "name": "synex",
-  "version": "0.0.0",
+  "name": "bot-template",
+  "version": "1.0.0",
   "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon",
-    "build": "tsc",
-    "esbuild": "node esbuild.build.cjs",
-    "start": "node dist/index.js",
-    "prettier": "prettier -w ."
+    "format": "prettier -w .",
+    "build": "tsc && tsup --config tsup.config.ts",
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "start": "node dist/index.js"
   },
   "keywords": [],
-  "author": "RohanDaCoder",
-  "license": "MIT",
-  "type": "module",
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "chalk": "^5.3.0",
-    "discord.js": "^14.15.3",
-    "dotenv": "^16.4.5",
-    "fs": "0.0.1-security"
+    "colors": "^1.4.0",
+    "discord.js": "^14.16.2"
   },
   "devDependencies": {
-    "@types/node": "^22.5.0",
-    "esbuild": "^0.23.1",
+    "@types/node": "^22.5.5",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
-    "tsx": "^4.18.0",
-    "typescript": "^5.5.4"
+    "ts-node": "^10.9.2",
+    "tsup": "^8.2.4",
+    "typescript": "^5.6.2"
   }
 }
