--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
-    "discord.js": "^14.16.2"
+    "discord.js": "^14.16.2",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "@types/node": "^22.5.5",
