--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "bot-template",
+  "name": "synex",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "private": true,
   "scripts": {
     "format": "prettier -w .",
     "build": "tsc && tsup --config tsup.config.ts",
     "dev": "nodemon --exec ts-node src/index.ts",
-    "start": "node dist/index.js"
+    "start": "node ."
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "RohanDaCoder",
+  "license": "MIT",
   "dependencies": {
     "colors": "^1.4.0",
     "discord.js": "^14.16.2"
   },
   "devDependencies": {
-    "@types/node": "^22.5.5",
-    "nodemon": "^3.1.4",
+    "@types/node": "^22.7.0",
+    "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
-    "tsup": "^8.2.4",
+    "tsup": "^8.3.0",
     "typescript": "^5.6.2"
   }
 }
