--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "RohanDaCoder",
   "license": "MIT",
   "dependencies": {
+    "calm.db": "^1.1.5",
     "colors": "^1.4.0",
     "discord.js": "^14.16.2"
   },
