--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "format": "prettier -w .",
     "build": "tsc && tsup --config tsup.config.ts",
     "dev": "nodemon --exec ts-node src/index.ts",
-    "start": "node ."
+    "start": "node .",
+    "manual": "clear && bun run build && bun run dist/index.js "
   },
   "keywords": [],
   "author": "RohanDaCoder",
   "license": "MIT",
   "dependencies": {
-    "calm.db": "^1.1.5",
     "colors": "^1.4.0",
     "discord.js": "^14.16.2"
   },
