--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "license": "MIT",
   "dependencies": {
     "colors": "^1.4.0",
-    "discord.js": "^14.16.2"
+    "discord.js": "^14.16.2",
+    "quick.db": "^9.1.7"
   },
   "devDependencies": {
     "@types/node": "^22.7.0",
