--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   "author": "RohanDaCoder",
   "license": "MIT",
   "dependencies": {
+    "calm.db": "^1.1.5",
     "colors": "^1.4.0",
-    "discord.js": "^14.16.2",
-    "quick.db": "^9.1.7"
+    "discord.js": "^14.16.2"
   },
   "devDependencies": {
     "@types/node": "^22.7.0",
