--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc && tsup --config tsup.config.ts",
     "dev": "nodemon --exec ts-node src/index.ts",
     "start": "node .",
-    "manual": "bun run build && bun run dist/index.js "
+    "lint": "eslint 'src/**/*.ts'",
+    "manual": "bun run lint && bun run build && bun run dist/index.js "
   },
   "keywords": [],
   "author": "RohanDaCoder",
@@ -20,10 +21,18 @@
     "discord.js": "^14.16.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.14.0",
+    "@stylistic/eslint-plugin-js": "^2.10.1",
+    "@typescript-eslint/eslint-plugin": "^8.14.0",
+    "@typescript-eslint/parser": "^8.14.0",
+    "eslint": "^9.14.0",
+    "eslint-plugin-stylistic-js": "^0.0.0-0",
+    "globals": "^15.12.0",
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "tsup": "^8.3.5",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.14.0"
   }
 }
