--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "RohanDaCoder",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.7.7",
     "calm.db": "^1.1.5",
     "colors": "^1.4.0",
     "discord.js": "^14.16.3"
