--- a/package.json
+++ b/package.json
@@ -20,20 +20,21 @@
 	"author": "RohanDaCoder",
 	"license": "MIT",
 	"dependencies": {
-		"axios": "^1.7.7",
+		"axios": "^1.7.8",
 		"calm.db": "^1.1.5",
 		"colors": "^1.4.0",
-		"discord.js": "^14.16.3"
+		"discord.js": "^14.16.3",
+		"parse-duration": "^1.1.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.15.0",
-		"@typescript-eslint/eslint-plugin": "^8.14.0",
-		"@typescript-eslint/parser": "^8.14.0",
+		"@typescript-eslint/eslint-plugin": "^8.16.0",
+		"@typescript-eslint/parser": "^8.16.0",
 		"eslint": "^9.15.0",
 		"globals": "^15.12.0",
-		"prettier": "^3.3.3",
+		"prettier": "^3.4.0",
 		"tsup": "^8.3.5",
-		"typescript": "^5.6.3",
-		"typescript-eslint": "^8.14.0"
+		"typescript": "^5.7.2",
+		"typescript-eslint": "^8.16.0"
 	}
 }
