--- a/package.json
+++ b/package.json
@@ -20,21 +20,22 @@
 	"author": "RohanDaCoder",
 	"license": "MIT",
 	"dependencies": {
-		"axios": "^1.7.8",
+		"axios": "^1.7.9",
 		"calm.db": "^1.1.5",
 		"colors": "^1.4.0",
 		"discord.js": "^14.16.3",
-		"parse-duration": "^1.1.0"
+		"dotenv": "^16.4.7",
+		"parse-duration": "^1.1.1"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.15.0",
-		"@typescript-eslint/eslint-plugin": "^8.16.0",
-		"@typescript-eslint/parser": "^8.16.0",
-		"eslint": "^9.15.0",
-		"globals": "^15.12.0",
-		"prettier": "^3.4.0",
+		"@eslint/js": "^9.17.0",
+		"@typescript-eslint/eslint-plugin": "^8.19.0",
+		"@typescript-eslint/parser": "^8.19.0",
+		"eslint": "^9.17.0",
+		"globals": "^15.14.0",
+		"prettier": "^3.4.2",
 		"tsup": "^8.3.5",
 		"typescript": "^5.7.2",
-		"typescript-eslint": "^8.16.0"
+		"typescript-eslint": "^8.19.0"
 	}
 }
