build: add dev script in package.json

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"format": "prettier -w .",
 		"build": "bun build src/index.ts --target=bun --sourcemap --outdir=dist/ --minify",
 		"start": "bun run dist/index.js",
+		"dev": "bun --watch run src/",
 		"deploy": "bun run build && bun run start"
 	},
 	"keywords": [
