--- a/package.json
+++ b/package.json
@@ -5,17 +5,20 @@
 	"scripts": {
 		"start": "bun dist/index.js",
 		"dev": "bun --watch run src/",
-		"build": "bun build src/index.ts --sourcemap --minify --outdir=dist/ --target=bun",
+		"build": "tsc && bun build src/index.ts --sourcemap --minify --outdir=dist/ --target=bun",
 		"deploy": "bun run build && bun run start",
 		"format": "prettier -w ."
 	},
 	"type": "module",
 	"dependencies": {
+		"axios": "^1.13.2",
 		"discord.js": "^14.25.1",
 		"dotenv": "^17.2.3",
+		"parse-duration": "^2.1.4",
 		"yoctocolors": "^2.1.2"
 	},
 	"devDependencies": {
-		"prettier": "^3.6.2"
+		"prettier": "^3.6.2",
+		"typescript": "^5.9.3"
 	}
 }
