--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
 	"scripts": {
 		"start": "bun dist/index.js",
 		"dev": "bun --watch run src/",
-		"build": "tsc && bun build src/index.ts --sourcemap --minify --outdir=dist/ --target=bun",
+		"build": "bun run format && tsc && bun build src/index.ts --sourcemap --minify --outdir=dist/ --target=bun",
 		"build:node": "bun run build --target=node",
 		"deploy": "bun run build && bun run start",
-		"format": "prettier -w ."
+		"format": "oxfmt"
 	},
 	"type": "module",
 	"dependencies": {
@@ -20,7 +20,6 @@
 	},
 	"devDependencies": {
 		"oxfmt": "^0.15.0",
-		"prettier": "^3.6.2",
 		"typescript": "^5.9.3"
 	}
 }
