--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -1,73 +1,59 @@
 {
-    "$schema": "./node_modules/oxlint/configuration_schema.json",
-    "ignorePatterns": [
-        "dist/*",
-        "node_modules/*"
-    ],
-    "files": [
-        "**/*.{js,mjs,cjs,ts}"
-    ],
-    "env": {
-        "node": true
-    },
-    "plugins": [
-        "typescript",
-        "eslint",
-        "unicorn"
-    ],
-    "rules": {
-        "prefer-switch": "warn",
-        "error-message": "error",
-        "prefer-ternary": "warn",
-        "unicorn/filename-case": [
-            "error",
-            {
-                "case": "camelCase"
-            }
-        ],
-        "typescript/explicit-module-boundary-types": "off",
-        "typescript/no-explicit-any": "off",
-        "no-unused-vars": "error",
-        "no-console": [
-            "error",
-            {
-                "allow": [
-                    "error"
-                ]
-            }
-        ],
-        "no-async-promise-executor": "off",
-        "no-shadow": "error",
-        "prefer-const": "warn",
-        "no-debugger": "error",
-        "yoda": "error",
-        "max-nested-callbacks": [
-            "error",
-            {
-                "max": 4
-            }
-        ],
-        "no-case-declarations": "error",
-        "no-empty": "error",
-        "no-eq-null": "error",
-        "no-eval": "warn",
-        "no-invalid-this": "error",
-        "no-redeclare": "error",
-        "default-case-last": "warn",
-        "eqeqeq": [
-            "warn",
-            "always"
-        ],
-        "no-useless-assignment": "error",
-        "no-use-before-define": [
-            "error",
-            {
-                "functions": false
-            }
-        ],
-        "no-template-curly-in-string": "error",
-        "no-duplicate-imports": "error",
-        "no-duplicate-case": "error",
-        "no-dupe-keys": "error"
-    }
+	"$schema": "./node_modules/oxlint/configuration_schema.json",
+	"ignorePatterns": ["dist/*", "node_modules/*"],
+	"files": ["**/*.{js,mjs,cjs,ts}"],
+	"env": {
+		"node": true
+	},
+	"plugins": ["typescript", "eslint", "unicorn"],
+	"rules": {
+		"prefer-switch": "warn",
+		"error-message": "error",
+		"prefer-ternary": "warn",
+		"unicorn/filename-case": [
+			"error",
+			{
+				"case": "camelCase"
+			}
+		],
+		"typescript/explicit-module-boundary-types": "off",
+		"typescript/no-explicit-any": "off",
+		"no-unused-vars": "error",
+		"no-console": [
+			"error",
+			{
+				"allow": ["error"]
+			}
+		],
+		"no-async-promise-executor": "off",
+		"no-shadow": "error",
+		"prefer-const": "warn",
+		"no-debugger": "error",
+		"yoda": "error",
+		"max-nested-callbacks": [
+			"error",
+			{
+				"max": 4
+			}
+		],
+		"no-case-declarations": "error",
+		"no-empty": "error",
+		"no-eq-null": "error",
+		"no-eval": "warn",
+		"no-invalid-this": "error",
+		"no-redeclare": "error",
+		"default-case-last": "warn",
+		"eqeqeq": ["warn", "always"],
+		"no-useless-assignment": "error",
+		"no-use-before-define": [
+			"error",
+			{
+				"functions": false
+			}
+		],
+		"no-template-curly-in-string": "error",
+		"no-duplicate-imports": "error",
+		"no-duplicate-case": "error",
+		"no-dupe-keys": "error"
+	}
 }
